--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no" />
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
+<link rel="apple-touch-icon" href="icon/yonde_icon_192.png">
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#3B82F6">
-<link rel="apple-touch-icon" href="yonde_icon_192.png">
 
 <title>あいうえお よんで！</title>
 <style>
