--- a/index.html
+++ b/index.html
@@ -562,6 +562,19 @@ if (saved) {
     else if(t === 'うんこ'){ triggerEmojiAnimation(['💩']); }
     else if(t === 'おしり'){ triggerEmojiAnimation(['🫣']); }
     else if(t === 'ざんねん'){ triggerEmojiAnimation(['😢']); }
+    else if(t === 'ぞう'){ triggerEmojiAnimation(['🐘']); }
+    else if(t === 'しまうま'){ triggerEmojiAnimation(['🦓']); }
+    else if(t === 'きりん'){ triggerEmojiAnimation(['🦒']); }
+    else if(t === 'ぱんだ'){ triggerEmojiAnimation(['🐼']); }
+    else if(t === 'うさぎ'){ triggerEmojiAnimation(['🐰']); }
+    else if(t === 'こあら'){ triggerEmojiAnimation(['🐨']); }
+    else if(t === 'こぶた'){ triggerEmojiAnimation(['🐷']); }
+    else if(t === 'きつね'){ triggerEmojiAnimation(['🦊']); }
+    else if(t === 'ねこ'){ triggerEmojiAnimation(['🐱']); }
+    else if(t === 'いぬ'){ triggerEmojiAnimation(['🐶']); }
+    else if(t === 'おなら'){ triggerEmojiAnimation(['💨']); }
+    else if(t === 'ばあば', 'おばあちゃん'){ triggerEmojiAnimation(['👵']); }
+    else if(t === 'じいじ', 'おじいちゃん'){ triggerEmojiAnimation(['👴']); }
 
     if(!t) return; warm();
 
