--- a/index.html
+++ b/index.html
@@ -573,8 +573,8 @@ if (saved) {
     else if(t === 'ねこ'){ triggerEmojiAnimation(['🐱']); }
     else if(t === 'いぬ'){ triggerEmojiAnimation(['🐶']); }
     else if(t === 'おなら'){ triggerEmojiAnimation(['💨']); }
-    else if(t === 'ばあば', 'おばあちゃん'){ triggerEmojiAnimation(['👵']); }
-    else if(t === 'じいじ', 'おじいちゃん'){ triggerEmojiAnimation(['👴']); }
+    else if(t === 'ばあば'){ triggerEmojiAnimation(['👵']); }
+    else if(t === 'じいじ'){ triggerEmojiAnimation(['👴']); }
 
     if(!t) return; warm();
 
