--- a/index.html
+++ b/index.html
@@ -628,12 +628,23 @@ const charToggleBtn=document.getElementById('charToggleBtn');
     if(t === 'すき'){ triggerEmojiAnimation(['❤️']); }
     else if(t === 'だいすき'){ triggerEmojiAnimation(['❤️', '❤️', '❤️']); }
     else if(t === 'おめでとう'){ triggerEmojiAnimation(['🎉', '🥳', '🎊']); }
-    else if(t === 'ゆず'){ triggerEmojiAnimation(['ゆず', 'ゆず', '😃']); }
-    else if(t === 'くるみ'){ triggerEmojiAnimation(['くるみ', 'くるみ', '😉']); }
-    else if(t === 'もね'){ triggerEmojiAnimation(['もね', 'もね', '😍']); }
-    else if(t === 'うんこ'){ triggerEmojiAnimation(['💩']); }
-    else if(t === 'おしり'){ triggerEmojiAnimation(['🫣']); }
+    else if(t === 'ありがとう'){ triggerEmojiAnimation(['😊', '🙏', '👍']); }
+    else if(t === 'いいね'){ triggerEmojiAnimation(['👍']); }
     else if(t === 'ざんねん'){ triggerEmojiAnimation(['😢']); }
+    else if(t === 'おはよう'){ triggerEmojiAnimation(['☀️']); }
+    else if(t === 'こんにちは'){ triggerEmojiAnimation(['🤗']); }
+    else if(t === 'こんばんは'){ triggerEmojiAnimation(['⭐']); }
+      
+    else if(t === 'ゆず'){ triggerEmojiAnimation(['⭐️', 'ゆず', '😃']); }
+    else if(t === 'くるみ'){ triggerEmojiAnimation(['🎀', 'くるみ', '😉']); }
+    else if(t === 'もね'){ triggerEmojiAnimation(['💖', 'もね', '😍']); }
+    else if(t === 'はるか'){ triggerEmojiAnimation(['🌟', 'はるか', '🥰']); }
+    else if(t === 'はると'){ triggerEmojiAnimation(['🕺', 'はると', '😎']); }
+      
+    else if(t === 'うんこ'){ triggerEmojiAnimation(['💩']); }
+    else if(t === 'おなら'){ triggerEmojiAnimation(['💨']); }
+    else if(t === 'おしり'){ triggerEmojiAnimation(['🫣']); }
+
     else if(t === 'ぞう'){ triggerEmojiAnimation(['🐘']); }
     else if(t === 'しまうま'){ triggerEmojiAnimation(['🦓']); }
     else if(t === 'きりん'){ triggerEmojiAnimation(['🦒']); }
@@ -644,9 +655,18 @@ const charToggleBtn=document.getElementById('charToggleBtn');
     else if(t === 'きつね'){ triggerEmojiAnimation(['🦊']); }
     else if(t === 'ねこ'){ triggerEmojiAnimation(['🐱']); }
     else if(t === 'いぬ'){ triggerEmojiAnimation(['🐶']); }
-    else if(t === 'おなら'){ triggerEmojiAnimation(['💨']); }
+    else if(t === 'かえる'){ triggerEmojiAnimation(['🐸']); }
+    else if(t === 'らいおん'){ triggerEmojiAnimation(['🦁']); }
+    else if(t === 'おさる'){ triggerEmojiAnimation(['🐒']); }
+    else if(t === 'さる'){ triggerEmojiAnimation(['🐵']); }
+    else if(t === 'ごりら'){ triggerEmojiAnimation(['🦍']); }
+    else if(t === 'うし'){ triggerEmojiAnimation(['🐂']); }
+   
     else if(t === 'ばあば'){ triggerEmojiAnimation(['👵']); }
     else if(t === 'じいじ'){ triggerEmojiAnimation(['👴']); }
+    else if(t === 'はは'){ triggerEmojiAnimation(['🧓']); }
+   
+    else if(t === 'おばけ'){ triggerEmojiAnimation(['👻']); }
 
     if(!t) return; warm();
 
