--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ header h1 span::before {
     font-size:calc(var(--key)*0.35);color:#111;
   }
   .okKey{
-    grid-column: 7 / span -1; 
+    grid-column: 7 / -1; 
     height:var(--okSize);
     border: 5px solid var(--accent);
     border-radius:20px;
@@ -437,8 +437,10 @@ body.portrait #rotateGate{ display: grid; }
           <button class="themeBtn" id="tGreen" aria-label="テーマ 緑"></button>
           <button class="themeBtn" id="tPink" aria-label="テーマ ピンク"></button>
         </div>
-        <label class="customBtn" for="bgPicker" style="grid-column: 1 / 3;">🖼️はいけいをえらぶ</label>
-        <button class="customBtn" id="bgResetBtn">リセット</button>
+        <div class="g3">
+            <label class="customBtn" for="bgPicker" style="grid-column: 1 / 3;">🖼️はいけいをえらぶ</label>
+            <button class="customBtn" id="bgResetBtn">リセット</button>
+        </div>
         <input id="bgPicker" class="fileInput" type="file" accept="image/*">
       </div>
 
@@ -521,7 +523,7 @@ body.portrait #rotateGate{ display: grid; }
   
   function handleSymbol(s){
     if(s==="゛"||s==="゜"){
-      const arr=Array.from(...display.textContent); if(!arr.length) return;
+      const arr=[...display.textContent]; if(!arr.length) return;
       const last=arr[arr.length-1];
       const rep=(s==="゛")?(daku[last]||rd[last]):(hand[last]||rh[last]);
       if(rep){
