--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@ function autoFit(){
 function updateCharToggle(){
   charToggleBtn.classList.toggle('on', charMode);
   // ラベルをわかりやすく（任意）
-  // charToggleBtn.textContent = charMode ? 'ひともじずつよむ' : 'ふつうによむ';
+  charToggleBtn.textContent = charMode ? 'ひともじずつよむ' : 'ふつうによむ';
 }
 
 document.getElementById('charToggleBtn').addEventListener('click', ()=>{
