--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="utf-9" />
+<meta charset="utf-8" />
 
 <meta name="viewport"
   content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no" />
@@ -92,21 +92,14 @@ header h1 span::before {
   overflow:hidden;
 }
 
-  /* 画面が狭い/縦のときはパネルを下に回して1カラムに */
-@media (orientation: portrait) {
-/* デフォルトは 2カラム */
-.deck {
-  grid-template-columns: 1fr var(--panelW);
-  grid-template-rows: auto;
-}
-
 /* 縦向きのときだけ強制1カラム */
+/* 縦向きは1カラムにしてパネルを下へ */
 @media (orientation: portrait) {
   .deck {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr auto; /* キーボード優先 */
   }
-  .panel { order: 2; }
+  .panel { order: 2; height: auto; max-height: none; }
   .boardWrap { order: 1; }
 }
   
@@ -329,44 +322,21 @@ header h1 span::before {
 }
 
   /* ===== スマホ〜小さめiPad縦向け: 900px以下で1カラムに ===== */
+/* 横向きかつ幅が狭い端末（iPhone横など）の微調整 */
 @media (orientation: landscape) and (max-width: 740px) {
-  /* タイトルは自動で小さく＆折り返し可に */
   header h1 {
     font-size: clamp(16px, 4vw, 24px);
     flex-wrap: wrap;
     gap: 0.35em;
   }
-  header h1 span::before {
-    inset: -0.4em;              /* 丸の大きさを少し小さめに */
-    border-radius: 999px;
-  }
-
-  /* 右パネルを下に：デッキは1カラム */
-  .deck {
-    grid-template-columns: 1fr;
-    gap: 10px;
-    padding: 8px 10px 10px;
-    overflow: auto;             /* 縦スクロールを許可 */
-  }
-  /* パネルは高さを自動に（はみ出し防止） */
-  .panel {
-    height: auto;
-    max-height: none;
-  }
-
-  /* 余白を少し詰める */
   :root {
     --panelGap: 10px;
     --gap: 8px;
   }
-
-  /* 表示欄も少しだけ低く・文字も自動縮小 */
   .display{
     min-height: calc(var(--key) * 0.8);
     font-size: clamp(16px, calc(var(--key) * 0.45), 24px);
   }
-
-  /* 下アクション列の高さをやや低く */
   .spaceKey, .okKey, .actionRow .charToggle {
     height: calc(var(--okSize) * 0.9);
   }
@@ -729,19 +699,21 @@ function autoFit(){
   const vw = innerWidth, vh = innerHeight;
   const portrait = vh > vw;
 
-  // デッキの左右パディング分（12px * 左右 + 内部 12px）
-  const gutters = 12 + 12 + 12;
+  // デッキの左右パディング分（12*3）
+  const gutters = 36;
   const innerVW = Math.max(320, vw - gutters);
 
-  // 縦（狭い）では1カラムなのでパネル幅は全幅、横では割合で決める
+  // パネル幅の決定
   let panelW;
   if (portrait) {
-    panelW = innerVW;                    // 縦は下に回すので幅=100%
+    // 縦はパネルを下に回す＝幅100%
+    panelW = innerVW;
   } else {
+    // iPhone横など狭い横向きはやや広めに確保
     const isSmallLandscape = vw < 740;
-    const ratio  = isSmallLandscape ? 0.36 : 0.30;
-    const minW   = portrait ? 180
-    const maxW   = portrait ? 320;
+    const ratio = isSmallLandscape ? 0.36 : 0.30;
+    const minW  = isSmallLandscape ? 180 : 190;
+    const maxW  = isSmallLandscape ? 300 : 320;
     panelW = Math.max(minW, Math.min(maxW, Math.round(innerVW * ratio)));
   }
   document.documentElement.style.setProperty('--panelW', panelW + 'px');
@@ -749,7 +721,7 @@ function autoFit(){
   const bw   = document.querySelector('.boardWrap');
   const leftW = bw.clientWidth;
 
-  // まず現在の gap を取得
+  // 現在の gap を取得
   const rootStyles = getComputedStyle(document.documentElement);
   let gap = parseInt(rootStyles.getPropertyValue('--gap')) || 10;
 
@@ -778,7 +750,7 @@ function autoFit(){
   document.documentElement.style.setProperty('--key', key + 'px');
   document.documentElement.style.setProperty('--okSize', key + 'px');
 }
-
+  
   document.getElementById('questionKey').addEventListener('click', ()=>insertText('？'), {passive:true});
   document.getElementById('spaceBtn').addEventListener('click', ()=>insertText(' '), {passive:true});
   document.getElementById('okActionBtn').addEventListener('click', speak, {passive:true});
