--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@ const charToggleBtn=document.getElementById('charToggleBtn');
     else if(t === 'こんばんは'){ triggerEmojiAnimation(['⭐']); }
       
     else if(t === 'ゆず'){ triggerEmojiAnimation(['⭐️', 'ゆず', '😃']); }
+    else if(t === 'おおうらゆず'){ triggerEmojiAnimation(['すごい👍', 'おおうら', '🤩','ゆず']); }
     else if(t === 'くるみ'){ triggerEmojiAnimation(['🎀', 'くるみ', '😉']); }
     else if(t === 'もね'){ triggerEmojiAnimation(['💖', 'もね', '😍']); }
     else if(t === 'はるか'){ triggerEmojiAnimation(['🌟', 'はるか', '🥰']); }
